<resources>
    <string name="app_name">Demo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">快速搜尋關鍵字</string>
    <string name="remove_bank_title">您確定要刪除 ”%1$s“ 這個帳戶嗎？</string>
    <string name="remove_bank_msg">帳戶內的紀錄將會被永久刪除</string>
    <string name="total_balance">總餘額</string>
    <string name="account_balance">帳戶餘額</string>
    <string name="recent_transition">近期存匯</string>
    <string name="recent_expenses">近期消費</string>
    <string name="add_bank_error">帳戶新增失敗</string>
    <string name="add_history_error">收支新增失敗</string>
    <string name="add_bank">新增銀行</string>
    <string name="remove_bank">移除銀行</string>
    <string name="edit">編輯</string>
    <string name="add_bank_hint">ＯＯ銀行</string>
    <string name="bank_name">銀行名稱</string>
    <string name="color_setting">顏色設置</string>
    <string name="confirm">確定</string>
    <string name="cancel">取消</string>
    <string name="cash">現金</string>
    <string name="delete_item">刪除選擇項目</string>
    <string name="monthly_balance">本月損益</string>
    <string name="daily_balance">本日損益</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="item_name">品項名稱</string>
    <string name="item_source">消費帳戶</string>
    <string name="item_name_hint">請輸入品項</string>
    <string name="item_price">品項價格</string>
    <string name="item_icon">品項圖示</string>
    <string name="item_type">品項收支</string>
    <string name="no_data">目前沒有任何資料</string>
    <string name="empty_balance">$ 0</string>
    <string name="invalid_input">請輸入完整資訊</string>
    <string name="invalid_number">輸入的數字過大</string>
</resources>